#93 mvp ticket buying using seatmap