@@ -1,8 +1,7 @@
 package at.ac.tuwien.sepm.groupphase.backend.controller.mapper;
 
-import at.ac.tuwien.sepm.groupphase.backend.dto.BookingDTO;
+import at.ac.tuwien.sepm.groupphase.backend.dto.BookingRequestDTO;
 import at.ac.tuwien.sepm.groupphase.backend.dto.FreeSeatgroupBookingDTO;
-import at.ac.tuwien.sepm.groupphase.backend.dto.SeatgroupSeatDTO;
 import at.ac.tuwien.sepm.groupphase.backend.entity.*;
 import at.ac.tuwien.sepm.groupphase.backend.service.SeatService;
 import org.junit.jupiter.api.Test;
@@ -28,9 +27,9 @@ class TicketMapperTest {
 
     @Test
     void fromDto() {
-        BookingDTO bookingDTO = new BookingDTO();
-        bookingDTO.setFreeSeats(Collections.singletonList(new FreeSeatgroupBookingDTO().amount(3L)));
-        bookingDTO.setFixedSeats(Collections.singletonList(new SeatgroupSeatDTO().x(1).y(1).seatgroupId(1L)));
+        BookingRequestDTO bookingDTO = new BookingRequestDTO();
+        bookingDTO.setAreas(Collections.singletonList(new FreeSeatgroupBookingDTO().amount(3L)));
+        bookingDTO.setSeats(List.of(1L));
 
         SeatedTicket seatedTicket = getSeatedTicket();
 
@@ -46,7 +45,7 @@ class TicketMapperTest {
         // We expect one standing and one seated ticket
         assertThat(ticketList.size()).isEqualTo(2);
         assertThat(ticketList).contains(seatedTicket);
-        verify(seatService,times(1)).byPosition(any(),any(),any());
+        verify(seatService,times(1)).getSeat(1L);
         verify(seatService,times(1)).getArea(any());
         verify(seatService,times(1)).getStandingArea(any());
     }
